--- a/Arquivos convertidos/src/styles/main.less
+++ b/Arquivos convertidos/src/styles/main.less
@@ -2,7 +2,7 @@
 @import "_variables.less";
 
 body {
-    background-color: @bgColor;
+    background-color:#bgColors[bodyBgColor];
 }
 
 li {
@@ -16,7 +16,7 @@ li {
 }
 
 header {
-    background-color: @headerBgColor;
+    background-color: #bgColors[headerBgColor];
     position: sticky;
     top: 0;
     left: 0;
